--- a/index.html
+++ b/index.html
@@ -15,7 +15,62 @@
 			</nav>
 		</header>
 		<main class="main-content">
-			<h1>Main Content</h1>
+			<div class="cards-container">
+			  <div class="card"> 
+			    <div>
+			      <img class="card__img" src="images/sample.jpg" />
+			    </div>
+			    <div class="card__content">
+			      <h3 class="card__title">Vlisco</h3>
+			      <p class="card__description">Lorem ipsum dolor sit amet, consectetur</p>
+			    </div>
+			  </div>
+			  <div class="card"> 
+			    <div>
+			      <img class="card__img" src="images/sample.jpg" />
+			    </div>
+			    <div class="card__content">
+			      <h3 class="card__title">Copenhagen Airports</h3>
+			      <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			    </div>
+			  </div>
+			  <div class="card"> 
+			    <div>
+			      <img class="card__img" src="images/sample.jpg" />
+			    </div>
+			    <div class="card__content">
+			      <h3 class="card__title">TV4 Play</h3>
+			      <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			    </div>
+			  </div>
+			  <div class="card"> 
+			    <div>
+			      <img class="card__img" src="images/sample.jpg" />
+			    </div>
+			    <div class="card__content">
+			      <h3 class="card__title">Audi City</h3>
+			      <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			    </div>
+			  </div>
+			  <div class="card"> 
+			    <div>
+			      <img class="card__img" src="images/sample.jpg" />
+			    </div>
+			    <div class="card__content">
+			      <h3 class="card__title">Arla Foods</h3>
+			      <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			    </div>
+			  </div>
+			  <div class="card"> 
+			    <div>
+			      <img class="card__img" src="images/sample.jpg" />
+			    </div>
+			    <div class="card__content">
+			      <h3 class="card__title">Xylem</h3>
+			      <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			    </div>
+			  </div>
+			</div>
 		</main>
 		<aside class="sidebar">
 			<h2 class="sidebar__heading">Side Bar</h2>
