--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>	
 <body>
 	<div class="container">
-		<header>
+		<header class="header">
 			<nav class="main-nav">
+				<a class="sidebar-link js-sidebar-link">sidebar</a>
 				<ul class="main-nav__menu">
 					<li class="main-nav__menu-item"><a class="main-nav__menu-link" href="index.html">Home<a/></li>
 					<li class="main-nav__menu-item"><a class="main-nav__menu-link" href="/about.html">About</a></li>
@@ -14,6 +15,10 @@
 				</ul>
 			</nav>
 		</header>
+		<aside class="sidebar">
+			<h2 class="sidebar__heading">Side Bar</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+		</aside>
 		<main class="main-content">
 			<div class="cards-container">
 			  <div class="card"> 
@@ -72,10 +77,6 @@
 			  </div>
 			</div>
 		</main>
-		<aside class="sidebar">
-			<h2 class="sidebar__heading">Side Bar</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-		</aside>
 		<footer></footer>
 	</div>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
